@@ -35,10 +35,16 @@ LIBS="$LIBS $GL_LIBS $GLU_LIBS"
 PKG_CHECK_MODULES([FT2], [freetype2 >= 9.0.3])
 PKG_CHECK_MODULES([PCRE], [libpcre])
 PKG_CHECK_MODULES([GLEW], [glew])
-PKG_CHECK_MODULES([SDL], [sdl >= 1.2.10 SDL_image])
 
-CPPFLAGS="${CPPFLAGS} ${FT2_CFLAGS} ${PCRE_CFLAGS} ${GLEW_CFLAGS} ${SDL_CFLAGS}"
-LIBS="${LIBS} ${FT2_LIBS} ${PCRE_LIBS} ${GLEW_LIBS} ${SDL_LIBS}"
+PKG_CHECK_MODULES([SDL2], [sdl2 SDL2_image], [have_sdl2=yes], [have_sdl2=no])
+
+# use SDL 2 if available, otherwise use SDL 1.2
+if test "x$have_sdl2" = xno; then
+    PKG_CHECK_MODULES([SDL], [sdl >= 1.2.10 SDL_image])
+fi
+
+CPPFLAGS="${CPPFLAGS} ${FT2_CFLAGS} ${PCRE_CFLAGS} ${GLEW_CFLAGS} ${SDL2_CFLAGS} ${SDL_CFLAGS}"
+LIBS="${LIBS} ${FT2_LIBS} ${PCRE_LIBS} ${GLEW_LIBS} ${SDL2_LIBS} ${SDL_LIBS}"
 
 AC_CHECK_FUNCS([IMG_LoadPNG_RW], , AC_MSG_ERROR([SDL_image with PNG support required. Please see INSTALL]))
 AC_CHECK_FUNCS([IMG_LoadJPG_RW], , AC_MSG_ERROR([SDL_image with JPEG support required. Please see INSTALL]))
