@@ -283,24 +283,54 @@ std::string Gource::dateAtPosition(float percent) {
     return date;
 }
 
+void Gource::grabMouse(bool grab_mouse) {
+    this->grab_mouse = grab_mouse;
+
+#if SDL_VERSION_ATLEAST(2,0,0)        
+    if(grab_mouse) {
+        if(!SDL_GetRelativeMouseMode()) {
+            // NOTE: SDL_SetWindowGrab needed as well to work around this bug:
+            // http://bugzilla.libsdl.org/show_bug.cgi?id=1967
+            
+            SDL_SetWindowGrab(display.sdl_window, SDL_TRUE);
+            SDL_SetRelativeMouseMode(SDL_TRUE);
+        }
+    } else {
+        if(SDL_GetRelativeMouseMode()) {
+            SDL_SetWindowGrab(display.sdl_window, SDL_FALSE);
+            SDL_SetRelativeMouseMode(SDL_FALSE);
+        }
+    }
+#endif
+
+#if not SDL_VERSION_ATLEAST(2,0,0)
+    if(!grab_mouse) {
+        // restore old mouse position
+        SDL_WarpMouse(mousepos.x, mousepos.y);
+    }
+#endif
+
+    cursor.showCursor(!grab_mouse);
+}
+
 void Gource::mouseMove(SDL_MouseMotionEvent *e) {
     if(commitlog==0) return;
     if(gGourceSettings.hide_mouse) return;
-
-    bool rightmouse = cursor.rightButtonPressed();
-
-#if not SDL_VERSION_ATLEAST(1,3,0)
+    
     if(grab_mouse) {
+#if not SDL_VERSION_ATLEAST(2,0,0)
          int warp_x = display.width/2;
          int warp_y = display.height/2;
 
          //this is an even we generated by warping the mouse below
          if(e->x == warp_x && e->y == warp_y) return;
 
-         SDL_WarpMouse(warp_x, warp_y);
-    }
+         SDL_WarpMouse(warp_x, warp_y);         
 #endif
+    }
 
+    bool rightmouse = cursor.rightButtonPressed();
+    
     //move camera in direction the user dragged the mouse
     if(mousedragged || rightmouse) {
         vec2 mag( e->xrel, e->yrel );
@@ -363,7 +393,7 @@ void Gource::zoom(bool zoomin) {
     camera.setDistance(distance);
 }
 
-#if SDL_VERSION_ATLEAST(1,3,0)
+#if SDL_VERSION_ATLEAST(2,0,0)
 void Gource::mouseWheel(SDL_MouseWheelEvent *e) {
 
    int mouse_x, mouse_y;
@@ -399,20 +429,15 @@ void Gource::mouseClick(SDL_MouseButtonEvent *e) {
 
         if(e->button == SDL_BUTTON_LEFT || e->button == SDL_BUTTON_RIGHT) {
             if(!cursor.buttonPressed()) {
-                grab_mouse=false;
-#if SDL_VERSION_ATLEAST(1,3,0)
-		SDL_SetRelativeMouseMode(SDL_FALSE);
-		SDL_WarpMouseInWindow(display.sdl_window, mousepos.x, mousepos.y);
-#else
-		SDL_WarpMouse(mousepos.x, mousepos.y);
-#endif
-                cursor.showCursor(true);
+                grabMouse(false);
             }
         }
     }
 
     if(e->type != SDL_MOUSEBUTTONDOWN) return;
 
+    
+#if not SDL_VERSION_ATLEAST(2,0,0)    
     //wheel up
     if(e->button == SDL_BUTTON_WHEELUP) {
         zoom(true);
@@ -424,7 +449,8 @@ void Gource::mouseClick(SDL_MouseButtonEvent *e) {
         zoom(false);
         return;
     }
-
+#endif
+    
     if(e->button == SDL_BUTTON_MIDDLE) {
         toggleCameraMode();
         return;
@@ -432,11 +458,7 @@ void Gource::mouseClick(SDL_MouseButtonEvent *e) {
 
 
     if(e->button == SDL_BUTTON_RIGHT) {
-        cursor.showCursor(false);
-        grab_mouse=true;
-#if SDL_VERSION_ATLEAST(1,3,0)
-        SDL_SetRelativeMouseMode(SDL_TRUE);
-#endif
+        grabMouse(true);
         return;
     }
 
@@ -507,9 +529,9 @@ void Gource::selectBackground() {
 
     manual_camera = true;
 
-    cursor.showCursor(false);
-    grab_mouse=true;
     mousedragged=true;
+
+    grabMouse(true);
 }
 
 //select a user, deselect current file/user
@@ -613,7 +635,8 @@ void Gource::keyPress(SDL_KeyboardEvent *e) {
 
     if (e->type == SDL_KEYDOWN) {
 
-#if SDL_VERSION_ATLEAST(1,3,0)
+        
+#if SDL_VERSION_ATLEAST(2,0,0)
         bool key_escape       = e->keysym.scancode == SDL_SCANCODE_ESCAPE;
         bool key_tab          = e->keysym.scancode == SDL_SCANCODE_TAB;
         bool key_space        = e->keysym.scancode == SDL_SCANCODE_SPACE;
@@ -638,7 +661,6 @@ void Gource::keyPress(SDL_KeyboardEvent *e) {
         bool key_period       = e->keysym.unicode == SDLK_PERIOD;
         bool key_slash        = e->keysym.unicode == SDLK_SLASH;
 #endif
-
         if (key_escape) {
             quit();
         }
@@ -1549,7 +1571,7 @@ void Gource::logic(float t, float dt) {
     bool up    = false;
     bool down  = false;
 
-#if SDL_VERSION_ATLEAST(1,3,0)
+#if SDL_VERSION_ATLEAST(2,0,0)
     Uint8 *keystate = SDL_GetKeyboardState(0);
 
     right = keystate[SDL_SCANCODE_RIGHT];
