@@ -263,6 +263,8 @@ class Gource : public SDLApp {
     void screenshot();
 
     void changeColours();
+    
+    void grabMouse(bool grab_mouse);
 public:
     Gource(FrameExporter* frameExporter = 0);
     ~Gource();
@@ -291,7 +293,7 @@ public:
     void keyPress(SDL_KeyboardEvent *e);
     void mouseMove(SDL_MouseMotionEvent *e);
     void mouseClick(SDL_MouseButtonEvent *e);
-#if SDL_VERSION_ATLEAST(1,3,0)
+#if SDL_VERSION_ATLEAST(2,0,0)
     void mouseWheel(SDL_MouseWheelEvent *e);
 #endif
 };
