@@ -91,12 +91,12 @@ void GourceShell::keyPress(SDL_KeyboardEvent *e) {
     //Quit demo if the user presses ESC
     if (e->type == SDL_KEYDOWN) {
 
-#if SDL_VERSION_ATLEAST(1,3,0)
+#if SDL_VERSION_ATLEAST(2,0,0)
         bool key_escape = e->keysym.scancode == SDL_SCANCODE_ESCAPE;
-	bool key_return = e->keysym.scancode == SDL_SCANCODE_RETURN;
+        bool key_return = e->keysym.scancode == SDL_SCANCODE_RETURN;
 #else
         bool key_escape = e->keysym.unicode == SDLK_ESCAPE;
-	bool key_return = e->keysym.unicode == SDLK_RETURN;
+        bool key_return = e->keysym.unicode == SDLK_RETURN;
 #endif
 
         if (key_escape) {
@@ -105,7 +105,7 @@ void GourceShell::keyPress(SDL_KeyboardEvent *e) {
 
         if(key_return) {
 
-#if SDL_VERSION_ATLEAST(1,3,0)
+#if SDL_VERSION_ATLEAST(2,0,0)
             Uint8* keystate = SDL_GetKeyboardState(NULL);
             if(keystate[SDL_SCANCODE_RALT] || keystate[SDL_SCANCODE_LALT]) {
 #else
@@ -129,7 +129,7 @@ void GourceShell::mouseMove(SDL_MouseMotionEvent *e) {
     if(gource!=0) gource->mouseMove(e);
 }
 
-#if SDL_VERSION_ATLEAST(1,3,0)
+#if SDL_VERSION_ATLEAST(2,0,0)
 void GourceShell::mouseWheel(SDL_MouseWheelEvent *e) {
     if(gource!=0) gource->mouseWheel(e);
 }
