@@ -28,6 +28,8 @@
 #include "formats/cvs-exp.h"
 #include "formats/cvs2cl.h"
 
+#include <boost/filesystem.hpp>
+
 extern "C" {
 
     static int logmill_thread(void *lmill) {
@@ -46,7 +48,7 @@ RLogMill::RLogMill(const std::string& logfile)
     logmill_thread_state = LOGMILL_STATE_STARTUP;
     clog = 0;
 
-#if SDL_VERSION_ATLEAST(1,3,0)
+#if SDL_VERSION_ATLEAST(2,0,0)
     thread = SDL_CreateThread( logmill_thread, "logmill", this );
 #else
     thread = SDL_CreateThread( logmill_thread, this );
@@ -57,7 +59,6 @@ RLogMill::~RLogMill() {
 
     abort();
 
-    if(thread) SDL_KillThread(thread);
     if(clog) delete clog;
 }
 
@@ -102,7 +103,7 @@ void RLogMill::run() {
     }
 
     if(!clog && error.empty()) {
-        if(SDLAppDirExists(logfile)) {
+        if(boost::filesystem::is_directory(logfile)) {
             if(!log_format.empty()) {
                 error = "failed to generate log file";
 #ifdef _WIN32
@@ -122,12 +123,13 @@ void RLogMill::run() {
 }
 
 void RLogMill::abort() {
+    if(!thread) return;
+
     // TODO: make abort nicer by notifying the log process
     //       we want to shutdown
-
-    while(logmill_thread_state <= LOGMILL_STATE_FETCHING) {
-        SDL_Delay(100);
-    }
+    SDL_WaitThread(thread, 0);
+    
+    thread = 0;
 }
 
 bool RLogMill::isFinished() {
@@ -145,10 +147,11 @@ std::string RLogMill::getError() {
 
 RCommitLog* RLogMill::getLog() {
 
-    while(logmill_thread_state <= LOGMILL_STATE_FETCHING) {
-        SDL_Delay(100);
+    if(thread != 0) {
+        SDL_WaitThread(thread, 0);
+        thread = 0;        
     }
-
+    
     return clog;
 }
 
