@@ -1,4 +1,5 @@
 0.41:
+ * Multi-monitor support using SDL 2.0 when available.
  * Full screen mode now uses desktop resolution by default.
  * Added --start-date option.
 
